--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-.brand-logo {
+/* .brand-logo {
   margin-left: 15px;
 }
 
@@ -17,4 +17,4 @@
 
 .collection-item form {
   margin-top: -5px;
-}
+} */
