--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Home</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>Welcome to Your Recipe Book!</h1>
-    <a href="/recipes">Recipes</a>
-    <a href="/recipes/new">Share Recipes</a>
-  </body>
-</html>
+<%- include('./partials/header') %>
+<h1>A Collection of Culinary Cultivators</h1>
+<h2>Join the Community</h2>
+<%- include('./partials/footer') %>
