Adding ability to append data to home screen from new form

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,3 +18,13 @@
 .collection-item form {
   margin-top: -5px;
 } */
+
+
+/* #text-area{
+  display: list-item;
+  outline: none;
+}
+
+#text-area select{
+  display: list-item;
+} */
