--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/header') %>
 <table id="list">
   <thead>
+    <h2>Recipe Book</h2>
     <tr>
       <th>Title</th>
       <th>Ingredients</th>
