--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -10,19 +10,16 @@
     <label>Instructions:</label>
     <input type="text" name="instructions" placeholder="Instructions">
 
-    <label>Cook-Time</label>
-    <input type="text" name="cookTime">
+    <label>Cook Time - </label>
+    <label>Hours: </label>
+    <input type="number" min="1" max="999">
+    <label>Mins: </label>
+    <input type="number" min="1" max="999">
 
-  <label>MPAA Rating</label>
-  <select name="mpaaRating">
-    <option value="G">G</option>
-    <option value="PG">PG</option>
-    <option value="PG-13">PG-13</option>
-    <option value="R">R</option>
-  </select>
-  <label>Now Showing:</label>
-  <input type="checkbox" name="nowShowing" checked>
-  <input type="submit" value="Add Movie">
+    <label>Gluten-Free: </label>
+    <input type="checkbox" name="glutenFree">
+
+    <input type="submit" value="Add Recipe">
 </form>
 
 <%- include('../partials/footer') %>
