--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -7,9 +7,12 @@
         <div>Instruction: <%= recipe.instructions %></div>
         <div>Cook Time: <%= recipe.cookTime %></div>
         <div>Is Glute Free?: <%= recipe.glutenFree ? 'Yes' : 'No' %></div>
-
-
     </section>
+
+    <h2>Share Recommendations</h2>
+    <form method="POST" action="/recipes/<%= recipe._id %>/recommendations">
+        <label for=""></label>
+    </form>
 
 
 
