--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,81 @@
+* {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 75px 1fr;
+  grid-template-areas:
+    "nav"
+    "main"
+}
+
+body > main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #E8ECEB;
+  padding: 20px;
+  overflow-y: scroll;
+}
+nav > a {
+  color: #E8ECEB;
+  text-decoration: none;
+  letter-spacing: 2px;
+}
+
+ nav {
+  display: flex;
+  grid-area: nav;
+  
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTO7-SX0fKMH4eXDNbHlWwVDVsQ8BExPe_XnGrz4Qo5AQ&usqp=CAU&ec=48665699);
+  background-size: cover;
+  
+}
+
+/* table {
+  font-size: 20px;
+}
+
+table thead th {
+  padding: 15px;
+  border-bottom: 2px solid #424748;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+}
+
+
+#new-rec-form {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 1rem;
+} */
+
+.login {
+  margin-left: auto;
+}
+
+.login img {
+  height: 70px;
+}
+
+.logout {
+  margin-left: auto;
+}
+
+
+
+
+
+
+
 /* .brand-logo {
   margin-left: 15px;
 }
