--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,9 @@
 <a href="/recipes">Recipes</a>
   <% if (user) { %>
     <a href="/recipes/new" >Add Recipes</a>
-    <a href="/logout">LOG OUT</a>
+    <a href="/logout" class="logout">LOG OUT</a>
   <% } else { %>
-    <a href="/auth/google" class="login">LOG IN&nbsp;</a>
+    <a href="/auth/google" class="login">&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
   <% } %>
 </nav>
   <main>
