--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -18,6 +18,7 @@
         <td><%= r.glutenFree %></td>
         <td><%= r.date.toLocaleDateString() %></td>
         <td><a href="/recipes/<%= r._id %>">Details</a></td>
+        <td><a href="/recipes/<%= r._id %>/edit">Edit</a></td>
       </tr>
       <% }); %>
     </tbody>
