--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -2,25 +2,25 @@
 
 <form id="new-form" action="/recipes" method="POST">
     <label>Title: </label>
-    <input type="text" name="title"><br>
+    <input type="text" name="title">
 
-    <label>Ingredients: </label><br>
+    <label>Ingredients: </label>
     <textarea type="text" name="ingredients" placeholder="Ingredients" cols="30" rows="5"></textarea><br>
 
-    <label>Instructions:</label><br>
+    <label>Instructions:</label>
     <textarea type="text" name="instructions" placeholder="Instructions" cols="30" rows="5"></textarea><br>
 
     <label>Cook Time</label><br>
     <label>Hours: </label>
     <input type="number" min="0" max="500" name="hours">
     <label>Mins: </label>
-    <input type="number" min="1" max="500" name="mins"><br>
+    <input type="number" min="1" max="500" name="mins">
 
     <label>Gluten-Free: </label>
     <label for="true">(T)</label>
     <input value=true type="radio" name="glutenFree">
     <label for="false">(F)</label>
-    <input value=false type="radio" name="glutenFree"><br>
+    <input value=false type="radio" name="glutenFree">
 
     <input type="submit" value="Add Recipe">
 </form>
