--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,19 @@
 <%- include('./partials/header') %>
 <h1>A Collection of Culinary Cultivators</h1>
 <h2>Join the Community</h2>
+
+<div class="slide-show">
+    <div class="box">
+        <img src="https://i.imgur.com/CUG0Aofb.jpg" alt="" class="pic1">
+        <img src="https://i.imgur.com/PDfdQwGb.jpg" alt="" class="pic2">
+    </div>
+    <div class="box">
+        <img src="https://i.imgur.com/35sa8wcb.jpg" alt="" class="pic3">
+        <img src="https://i.imgur.com/jUp3Ibjb.jpg" alt="" class="pic4">
+    </div>
+    <div class="box">
+        <img src="https://i.imgur.com/H0qFmyib.jpg" alt="" class="pic5">
+        <img src="https://i.imgur.com/7g3KWJub.jpg" alt="" class="pic6">
+    </div>
+</div>
 <%- include('./partials/footer') %>
