--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -253,11 +253,11 @@ table td {
 } */
 
 
-text-area{
+/* text-area{
   display: list-item;
   outline: none;
 }
 
 text-area select{
   display: list-item;
-}
+} */
