--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -20,15 +20,17 @@
         <label>Instructions</label>
         <textarea type="text" name="newInstruct" placeholder="Instructions"></textarea>
         <label>Gluten-Free
-        <input type="radio" name="isGF">
+        <input value=true type="radio" name="isGF">
+        <input value=false type="radio" name="isGF">
         <label>Date</label>
         <input type="datetime-local" name="recDate">
         <input type="submit" value="Submit">
-        </form>
+    </form>
 <% } else { %>
 
 <span>Please Login To Leave A Recommendation</span>
 <% } %>
+
 <% if (recipe.recommendations.length) { %>
     <h2>Try Something New!</h2>
   <table>
@@ -48,21 +50,19 @@
           <td><%= recommendation.newIngred %></td>
           <td><%= recommendation.newInstruct %></td>
           <td><%= recommendation.isGF %></td>
-          <td><%= recommendation.recDate.toLocaleDateString() %></td>
+          <td><%= recommendation.recDate. %></td>
+          
           <td>
-        <%= recommendation.text %>
         <% if (user && recommendation.userId.equals(user._id)) { %>
             <form method="POST" action="/recommendations/<%= recommendation._id %>?_method=DELETE">
             <button type="submit">Remove</button>
+        </form>
+        <% }} %>
           </td> 
-            </form>
-        <% } %>
-          </td>
         </tr>
-      <% }); %> 
-      
-    </tbody>
-  </table>
+        <% ) %>
+        </tbody>
+    </table>
 <% } else { %>
   <h5>No Recommendations Yet</h5>
 <% } %>
