--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -4,24 +4,24 @@
 <form id="edit-form" action="/recipes/<%= recipe._id %>?_method=PUT" method="POST">
     
     <label>Title: </label>
-    <input type="text" value=<%= recipe.title %> name="title">
+    <input type="text" value="<%= recipe.title %>" name="title">
     <label>Ingredients: </label>
-    <textarea type="text" name="ingredients" placeholder="Ingredients" cols="30" rows="5"><%= recipe.ingredients %> </textarea>
+    <textarea type="text" name="ingredients" placeholder="Ingredients" cols="30" rows="5"><%= recipe.ingredients %></textarea>
 
     <label>Instructions:</label>
     <textarea  type="text" name="instructions" placeholder="Instructions" cols="30" rows="5"><%= recipe.instructions %></textarea>
 
     <label>Cook Time</label>
     <label>Hours: </label>
-    <input value=<%= recipe.hours %> type="number" min="0" max="500" name="hours">
+    <input value="<%= recipe.mins %>" type="number" min="0" max="500" name="hours">
     <label>Mins: </label>
-    <input value=<%= recipe.mins %> type="number" min="1" max="500" name="mins">
+    <input value="<%= recipe.hours %>" type="number" min="1" max="500" name="mins">
 
     <label>Gluten-Free: </label>
     <label for="true">(T)</label>
-    <input value=<%= recipe.glutenFree %> value=true type="radio" name="glutenFree">
+    <input value="<%= recipe.glutenFree %>" value=true type="radio" name="glutenFree">
     <label for="false">(F)</label>
-    <input value=<%= recipe.glutenFree %> value=false type="radio" name="glutenFree">
+    <input value="<%= recipe.glutenFree %>" value=false type="radio" name="glutenFree">
 
     <input type="submit" value="Accept">
 </form>
