--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -5,10 +5,10 @@
     
     <label>Title: </label>
     <input type="text" value="<%= recipe.title %>" name="title">
-    <label>Ingredients: </label>
+    <label>Ingredients</label>
     <textarea type="text" name="ingredients" placeholder="Ingredients" cols="30" rows="5"><%= recipe.ingredients %></textarea>
 
-    <label>Instructions:</label>
+    <label>Instructions</label>
     <textarea  type="text" name="instructions" placeholder="Instructions" cols="30" rows="5"><%= recipe.instructions %></textarea>
 
     <label>Cook Time</label>
@@ -17,11 +17,12 @@
     <label>Mins: </label>
     <input value="<%= recipe.hours %>" type="number" min="1" max="500" name="mins">
 
-    <label>Gluten-Free: </label>
+    <label>Gluten-Free: 
     <label for="true">(T)</label>
     <input value="<%= recipe.glutenFree %>" value=true type="radio" name="glutenFree">
     <label for="false">(F)</label>
     <input value="<%= recipe.glutenFree %>" value=false type="radio" name="glutenFree">
+    </label>
 
     <input type="submit" value="Accept">
 </form>
